--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container-fluid">
-        <div class="row">
+        <div class="row" id="begin">
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 ">
                 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                     <div id="carouselExample" class="carousel slide h-100">
@@ -96,22 +96,22 @@
                 <div class="sticky-top pt-3">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">
+                            <a class="nav-link active" aria-current="page" href="#begin">
                                 <span data-feather="home"></span> Inicio
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="#who">
                                 <span data-feather="who"></span> ¿Quienes Somos?
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="#we">
                                 <span data-feather="we"></span> Somos Estadounidenses
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="#join">
                                 <span data-feather="join"></span> Unete a Genuine
                             </a>
                         </li>
