--- a/index.html
+++ b/index.html
@@ -46,23 +46,25 @@
                         <img src="static/img/show.png" alt="Who">
                         <h2 class="">Nuestra Mision en el Mundo y lo que soñamos para nuestros hijos</h2>
                     </div>
-                    <div class="col">
-                        <div class="card bg-gradient" style="width: 18rem;">
+                    <div class="row  text-center">
+                    <div class="col mx-auto">
+                        <div class="card border-primary bg-transparent" style="width: 18rem;">
                             <div class="card-body">
-                                <h3 class="card-title">Nuestra Mision</h3>
-                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam molestiae ut doloremque animi, non quos quae quis incidunt, accusantium nihil ex vel dolorum reiciendis beatae maiores! Ab veritatis vitae nesciunt.</p>
+                                <h3 class="card-title text-primary">Nuestra Mision</h3>
+                                <p class="card-text text-primary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam molestiae ut doloremque animi, non quos quae quis incidunt, accusantium nihil ex vel dolorum reiciendis beatae maiores! Ab veritatis vitae nesciunt.</p>
 
                             </div>
                         </div>
                     </div>
-                    <div class="col">
-                        <div class="card" style="width: 18rem;">
+                    <div class="col mx-auto">
+                        <div class="card border-primary bg-transparent" style="width: 18rem;">
                             <div class="card-body">
-                                <h3 class="card-title">Nuestra Vision</h3>
+                                <h3 class="card-title text-primary">Nuestra Vision</h3>
                                 <p class="card-text text-primary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat praesentium eligendi soluta ullam harum, deserunt eos corrupti nesciunt in delectus ipsa ut labore sapiente. Ipsum adipisci itaque nihil rerum soluta.</p>
 
                             </div>
                         </div>
+                    </div>
                     </div>
                     <span></span>
                 </div>
