--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
                                         <p class="lavender  rounded mx-auto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque commodi officia numquam quo corporis nam vero labore vel consequuntur, repudiandae quae delectus vitae iusto atque fugit voluptatibus, repellat iure ex.</p>
                                         <p class="dark-purple  rounded mx-auto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit, odit nesciunt nostrum pariatur ea provident consectetur ipsa consequuntur vitae, ut eos laudantium, animi ratione officiis error quam reiciendis minus! Voluptatem?</p>
                                     </div>
-                                    <div class="col">
+                                    <div class="col text-center">
+                                        <button type="button" class="btn btn-outline-warning"> 400 Estudiantes</button>
+                                        <button type="button" class="btn btn-outline-info">28 Staff</button>
+                                        <button type="button" class="btn btn-outline-dark">44 profesores</button>
                                         <img src="./static/img/mapa.webp" alt="word" class="img-fluid rounded">
                                     </div>
                                 </div>
