--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                         </div>
                         
                     </div>
-                    <div class="col mx-auto mr-3">
-                        <div class="card border-primary bg-transparent" style="width: 18rem;">
+                    <div class="col mx-auto  px-auto ml-3 text-center">
+                        <div class="card border-primary bg-transparent px-auto mx-auto" style="width: 18rem;">
                             <div class="card-body">
                                 <h3 class="card-title text-primary">Nuestra Vision</h3>
                                 <p class="card-text text-primary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat praesentium eligendi soluta ullam harum, deserunt eos corrupti nesciunt in delectus ipsa ut labore sapiente. Ipsum adipisci itaque nihil rerum soluta.</p>
@@ -77,11 +77,11 @@
                         <div class="card p-2 m-2">
                         <div class="card-body">
                             <div class="row">
-                            <div class="col">
+                            <div class="col col-sm-12 col-md-4 col-lg-4">
                                 <h5 class="card-title text-primary text-center">De Estados unidos para el mundo</h5>
                                 <p class="card-text  text-primary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat praesentium eligendi soluta ullam harum, deserunt eos corrupti nesciunt in delectus ipsa ut labore sapiente. Ipsum adipisci itaque nihil rerum soluta.</p>
                             </div>
-                            <div class="col">
+                            <div class="col col-sm-12 col-md-8 col-lg-8 text-end">
                                 <img src="./static/img/we.png" alt="picure" class="img-fluid rounded">
                             </div>
                             </div>
@@ -93,7 +93,7 @@
                         <div class="card p-2 m-2">
                             <div class="card-body">
                                 <div class="row">
-                                    <div class="col col-md-4 col-lg-4 d-md-block">
+                                    <div class="col col-sm-12 col-md-4 col-lg-4">
                                          <h5 class="card-title text-primary">Somos del Mundo</h5>
                                          <p class="orange rounded mx-auto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat praesentium eligendi soluta ullam harum, deserunt eos corrupti nesciunt in delectus ipsa ut labore sapiente. Ipsum adipisci itaque nihil rerum soluta.</p>
                                         <p class="lavender  rounded mx-auto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque commodi officia numquam quo corporis nam vero labore vel consequuntur, repudiandae quae delectus vitae iusto atque fugit voluptatibus, repellat iure ex.</p>
