Update the text

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <div class="card border-primary bg-transparent px-auto mx-auto" style="width: 18rem;">
                             <div class="card-body">
                                 <h3 class="card-title text-primary">Nuestra Mision</h3>
-                                <p class="card-text text-primary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam molestiae ut doloremque animi, non quos quae quis incidunt, accusantium nihil ex vel dolorum reiciendis beatae maiores! Ab veritatis vitae nesciunt.</p>
+                                <p class="card-text text-primary text-justify">Educar, empoderar y conectar a nuestros estudiantes mediante experiencias de aprendizaje remoto que trasiendan las fronteras geograficas e idiomaticas.</p>
 
                             </div>
                         </div>
@@ -63,12 +63,13 @@
                         <div class="card border-primary bg-transparent px-auto mx-auto" style="width: 18rem;">
                             <div class="card-body">
                                 <h3 class="card-title text-primary">Nuestra Vision</h3>
-                                <p class="card-text text-primary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat praesentium eligendi soluta ullam harum, deserunt eos corrupti nesciunt in delectus ipsa ut labore sapiente. Ipsum adipisci itaque nihil rerum soluta.</p>
+                                <p class="card-text text-primary text-justify">Visualizamos un mundo donde miles de jovenes y niños usen sus habilidades para transformar sus comunidades y regiones por el medio del emprendimiento, la tecnologia y la innovacion.</p>
 
                             </div>
                         </div>
                     </div>
-                    </div>
+                    <span class="mx-auto px-auto">.</span>
+                </div>
                    
                 </div>
                 </div>
@@ -79,7 +80,8 @@
                             <div class="row">
                             <div class="col col-sm-12 col-md-4 col-lg-4">
                                 <h5 class="card-title text-primary text-center">De Estados unidos para el mundo</h5>
-                                <p class="card-text  text-primary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat praesentium eligendi soluta ullam harum, deserunt eos corrupti nesciunt in delectus ipsa ut labore sapiente. Ipsum adipisci itaque nihil rerum soluta.</p>
+                                <p class="card-text  text-primary text-justify">Nuestro colegio digital privado esta constituido y registrado en Estados Unidos ante el Florida Department of Education con el codigo 8822</p>
+                                <p class="text-primary text-justify">Conoce el nuestro aqui <button type="button" class="btn btn-primary btn-outline-light">Registro legal</button></p>
                             </div>
                             <div class="col col-sm-12 col-md-8 col-lg-8 text-end">
                                 <img src="./static/img/we.png" alt="picure" class="img-fluid rounded">
@@ -95,9 +97,9 @@
                                 <div class="row">
                                     <div class="col col-sm-12 col-md-4 col-lg-4">
                                          <h5 class="card-title text-primary">Somos del Mundo</h5>
-                                         <p class="orange rounded mx-auto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat praesentium eligendi soluta ullam harum, deserunt eos corrupti nesciunt in delectus ipsa ut labore sapiente. Ipsum adipisci itaque nihil rerum soluta.</p>
-                                        <p class="lavender  rounded mx-auto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque commodi officia numquam quo corporis nam vero labore vel consequuntur, repudiandae quae delectus vitae iusto atque fugit voluptatibus, repellat iure ex.</p>
-                                        <p class="dark-purple  rounded mx-auto">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit, odit nesciunt nostrum pariatur ea provident consectetur ipsa consequuntur vitae, ut eos laudantium, animi ratione officiis error quam reiciendis minus! Voluptatem?</p>
+                                         <p class="orange text-justify m-0 p-0">Colombia, Ecuador, Peru, Mexico, Panama, Costa Rica, Chile, Argentina, Estados Unidos, Emigratos Arabes, Brazil, Republica Dominicana, Irlanda, Canada, España, Portugal, China, Italia.</p>
+                                        <p class="lavender text-justify m-0 p-0">Estados Unidos, Colombia, Peru, Brazil, Chile, Mexico, Venezuela.</p>
+                                        <p class="dark-purple text-justify m-0 p-0">Colombia, Sudafrica, Filipinas, Chile, Mexico, Singapur</p>
                                     </div>
                                     <div class="col text-center">
                                         <button type="button" class="btn btn-outline-warning"> 400 Estudiantes</button>
@@ -117,12 +119,12 @@
                     </div>
                     <div class="card w-75 mx-auto px-auto mt-auto " id="join-panel">
                         <div class="card-header w-100" id="header-card">
-                          Featured
+                          ¡ Unete a Genuine Digital School hoy !
                         </div>
                         <div class="card-body">
-                          <h5 class="card-title">Special title treatment</h5>
-                          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <h5 class="card-title">Explora el increible universo de la educacion virtual junto a tu hijo</h5>
+                          <p class="card-text">Siguenos en las Redes Sociales y conoce nuestra gran comunidad Digital</p>
+                          Logos
                         </div>
                     </div>
                 </div>
