--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="static/css/styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"  rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -52,6 +54,9 @@
                     <div class="col mx-auto  px-auto ml-3 text-center">
                         <div class="card border-primary bg-transparent px-auto mx-auto" style="width: 18rem;">
                             <div class="card-body">
+                                <span class="material-symbols-outlined text-primary">
+                                    rocket
+                                    </span>
                                 <h3 class="card-title text-primary">Nuestra Mision</h3>
                                 <p class="card-text text-primary text-justify">Educar, empoderar y conectar a nuestros estudiantes mediante experiencias de aprendizaje remoto que trasiendan las fronteras geograficas e idiomaticas.</p>
 
@@ -62,6 +67,9 @@
                     <div class="col mx-auto  px-auto ml-3 text-center">
                         <div class="card border-primary bg-transparent px-auto mx-auto" style="width: 18rem;">
                             <div class="card-body">
+                                <span class="material-symbols-outlined text-primary">
+                                    visibility
+                                    </span>
                                 <h3 class="card-title text-primary">Nuestra Vision</h3>
                                 <p class="card-text text-primary text-justify">Visualizamos un mundo donde miles de jovenes y niños usen sus habilidades para transformar sus comunidades y regiones por el medio del emprendimiento, la tecnologia y la innovacion.</p>
 
@@ -124,7 +132,10 @@
                         <div class="card-body">
                           <h5 class="card-title">Explora el increible universo de la educacion virtual junto a tu hijo</h5>
                           <p class="card-text">Siguenos en las Redes Sociales y conoce nuestra gran comunidad Digital</p>
-                          Logos
+                          <img src="./static/img/icon/facebook.svg" alt="Facebook" class="img-thumbnail">
+                          <img src="./static/img/icon/instagram.svg" alt="Instagram" class="img-thumbnail">
+                          <img src="./static/img/icon/youtube.svg" alt="Youtube" class="img-thumbnail">
+                          <img src="./static/img/icon/linkedin.svg" alt="Linkeding" class="img-thumbnail">
                         </div>
                     </div>
                 </div>
