--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
             <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light collapse fixed-left rounded h-auto ">
                 <div class="sticky-top pt-3">
-                    <ul class="nav flex-column">
+                    <ul class="nav flex-column  card">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#begin">
                                 <span data-feather="home"></span> Inicio
