--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
                 </div>
 
-                <div class="h-auto text-center  rounded text-center mt-2 pt-2 who" id="who">
+                <div class="h-auto text-center  rounded text-center who" id="who">
                     <div class="h-100 row w-100">
                     <div class="container">
                         <img src="static/img/show.png" alt="Who">
@@ -81,7 +81,8 @@
                    
                 </div>
                 </div>
-                <div class="container mt-2 pt-2" id="we">                   
+
+                <div class="container " id="we">                   
                         
                         <div class="card p-2 m-2">
                         <div class="card-body">
@@ -174,6 +175,7 @@
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="./static/js/functions.js"></script>
 <script>
 </script>
 
